<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="9dp"
        android:layout_weight="1"
        android:height="44dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/emailInput_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login" />

    <EditText
        android:id="@+id/passwordInput_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="297dp"
        android:layout_weight="2"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/loginButton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput_login" />

    <Button
        android:id="@+id/loginButton_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="81dp"
        android:height="45dp"
        android:fadingEdge="none"
        android:fadingEdgeLength="50dp"
        android:padding="10dp"
        android:text="@string/login"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput_login" />


</androidx.constraintlayout.widget.ConstraintLayout>