<resources>
    <string name="app_name">Byblos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="a_group_43_project">A Group 43 Project</string>
    <string name="welcome_to_byblos">Welcome to Byblos</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="prompt_renter_valid_email">Please enter a valid Email</string>
    <string name="prompt_renter_email">Please enter an Email</string>
    <string name="customer">Customer</string>
    <string name="register">Register</string>
    <string name="employee">Employee</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="registration">Registration</string>
    <string name="login_successfull">Login Successful</string>
    <string name="login_failed">Login not Successful</string>

    <string name="choose_rating">Select</string>

    <string-array name="car_type">
        <item>Sedan</item>
        <item>Hatchback</item>
        <item>SUV</item>
    </string-array>

    <string-array name="truck_type">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="service_type">
        <item>All</item>
        <item>Car Rental</item>
        <item>Truck Rental</item>
        <item>Moving Assistance</item>
    </string-array>

    <string-array name="rating">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>