...
            android:text="@string/a_group_43_project"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/loginButton_main"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:height="45dp"
            android:fadingEdge="none"
            android:fadingEdgeLength="50dp"
            android:padding="10dp"
...
